# mini-face-meson-test

./: .gitignore  meson.build  pyproject.toml
.github/workflows/: ci.yml  test_release.yml
mini_face/open_face_api/: meson.build  vcpkg.json
mini_face/open_face_api/src/: bindings.cpp
mini_face_oxidized/: __init__.py  meson.build
mini_face_oxidized/open_face_api/: .clang-format  __init__.py  meson.build  vcpkg.json
mini_face_oxidized/open_face_api/include/: action_units.h  conversions.h  gaze.h  helpers.h  landmarks.h
mini_face_oxidized/open_face_api/open_face/include/: CCNF_patch_expert.h  CEN_patch_expert.h  CNN_utils.h  FaceAnalyser.h  FaceAnalyserParameters.h  FaceDetectorMTCNN.h  Face_utils.h  GazeEstimation.h  ImageManipulationHelpers.h  LandmarkDetectionValidator.h  LandmarkDetectorFunc.h  LandmarkDetectorModel.h  LandmarkDetectorParameters.h  LandmarkDetectorUtils.h  PAW.h  PDM.h  Patch_experts.h  RotationHelpers.h  SVM_dynamic_lin.h  SVM_static_lin.h  SVR_dynamic_lin_regressors.h  SVR_patch_expert.h  SVR_static_lin_regressors.h  stdafx.h  stdafx_fa.h
mini_face_oxidized/open_face_api/open_face/src/: CCNF_patch_expert.cpp  CEN_patch_expert.cpp  CNN_utils.cpp  FaceAnalyser.cpp  FaceAnalyserParameters.cpp  FaceDetectorMTCNN.cpp  Face_utils.cpp  GazeEstimation.cpp  LandmarkDetectionValidator.cpp  LandmarkDetectorFunc.cpp  LandmarkDetectorModel.cpp  LandmarkDetectorParameters.cpp  LandmarkDetectorUtils.cpp  PAW.cpp  PDM.cpp  Patch_experts.cpp  SVM_dynamic_lin.cpp  SVM_static_lin.cpp  SVR_dynamic_lin_regressors.cpp  SVR_patch_expert.cpp  SVR_static_lin_regressors.cpp
mini_face_oxidized/open_face_api/src/: action_units.cpp  bindings.cpp  conversions.cpp  gaze.cpp  landmarks.cpp  open_face.cpp
scripts/: install_cpp_toolchain.sh
scripts/cpp_toolchain_setup/: manylinux.sh  musllinux.sh
