[project]
name = 'mini-face-oxidized'
version = '0.0.1'
description = 'An oxidized OpenFace ported to Python'
readme = 'README.md'
requires-python = '>=3.12'
license = { file = 'LICENSE.txt' }
authors = [{ name = 'Jan Smółka', email = 'jp.smolka@gmail.com' }]

[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'pybind11']

# [tool.cibuildwheel]
# environment = { PATH = "$PATH:/home/runner/work/mini-face-meson-test/mini-face-meson-test/vcpkg:/usr/local/bin" } # This allows accessing `vcpkg` in the container created by `cibuildwheel`

[tool.cibuildwheel]
before-all = "ls ./vpckg; sh ./vcpkg/bootstrap-vcpkg.sh"
