[project]
name = 'mini-face-oxidized'
version = '0.0.1'
description = 'An oxidized OpenFace ported to Python'
readme = 'README.md'
requires-python = '>=3.12'
license = { file = 'LICENSE.txt' }
authors = [{ name = 'Jan Smółka', email = 'jp.smolka@gmail.com' }]

[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'pybind11']

[tool.cibuildwheel]
before-build = "git clone https://github.com/microsoft/vcpkg.git; sh ./vcpkg/bootstrap-vcpkg.sh; export VCPKG_ROOT=$(pwd)/vcpkg; export PATH=$PATH:$(pwd)/vcpkg; whereis vcpkg"

[tool.cibuildwheel.linux]
before-build = "sudo apt-get install curl zip unzip tar; git clone https://github.com/microsoft/vcpkg.git; sh ./vcpkg/bootstrap-vcpkg.sh; export VCPKG_ROOT=$(pwd)/vcpkg; export PATH=$PATH:$(pwd)/vcpkg; whereis vcpkg"
