[project]
name = 'mini-face-oxidized'
version = '0.0.1'
description = 'An oxidized OpenFace ported to Python'
readme = 'README.md'
requires-python = '>=3.12'
license = { file = 'LICENSE.txt' }
authors = [{ name = 'Jan Smółka', email = 'jp.smolka@gmail.com' }]

[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'pybind11']

[tool.cibuildwheel.linux]
archs = ['x86_64']
before-all = "sh scripts/install_cpp_toolchain.sh"
